tree_sitter/tree-sitter-calc/corpus/main.txt
================================================================================
constants
================================================================================

1
123456
0

--------------------------------------------------------------------------------

(source_file
  (constant)
  (constant)
  (constant))

================================================================================
unary expressions
================================================================================

-1
+1

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    (constant))
  (unary_expression
    (constant)))

================================================================================
binary expressions
================================================================================

1 + 2
1 - 2
1 * 2
1 / 2

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (constant)
    (constant))
  (binary_expression
    (constant)
    (constant))
  (binary_expression
    (constant)
    (constant))
  (binary_expression
    (constant)
    (constant)))

================================================================================
nested expressions
================================================================================

-4 * 3 - 2 / -1 + 5

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (binary_expression
      (binary_expression
        (unary_expression
          (constant))
        (constant))
      (binary_expression
        (constant)
        (unary_expression
          (constant))))
    (constant)))

================================================================================
multiple lines
================================================================================

-4 *
    3 -
2 /
    -1 +
5

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (binary_expression
      (binary_expression
        (unary_expression
          (constant))
        (constant))
      (binary_expression
        (constant)
        (unary_expression
          (constant))))
    (constant)))

================================================================================
comments
================================================================================

# This
# is
1
# comment!
99 - 3
# foo #
1 * 2
# eof

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (constant)
  (comment)
  (binary_expression
    (constant)
    (constant))
  (comment)
  (binary_expression
    (constant)
    (constant))
  (comment))
